test/bad/generics/call03.px

func f<T>(T x, T y) def
    return

func g<A,B>(A x, B y) def
    f(x, y)

g('x', false)
